potatoStudy_jwt/src/main/java/com/example/potatoStudy_jwt/error/exception/BusinessException.java
package com.example.potatoStudy_jwt.error.exception;

import com.example.potatoStudy_jwt.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException{
    private final ErrorCode errorCode;

    public BusinessException(String message, ErrorCode errorCode) {
        super(message);
        this.errorCode = errorCode;
    }
}
